# serializer version: 1
# name: test_devices[ondilo_ico-W1122333044455]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'ondilo_ico',
        'W1122333044455',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'Ondilo',
    'model': 'ICO',
    'model_id': None,
    'name': 'Pool 1',
    'name_by_user': None,
    'serial_number': 'W1122333044455',
    'sw_version': '1.7.1-stable',
    'via_device_id': None,
  })
# ---
# name: test_devices[ondilo_ico-W2233304445566]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'ondilo_ico',
        'W2233304445566',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'Ondilo',
    'model': 'ICO',
    'model_id': None,
    'name': 'Pool 2',
    'name_by_user': None,
    'serial_number': 'W2233304445566',
    'sw_version': '1.7.1-stable',
    'via_device_id': None,
  })
# ---
